shop/kustomize/shop/base/saleor/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
spec:
  tls:
    - hosts:
        - DASHBOARD_FQDN
      secretName: dashboard-tls
  rules:
    - host: DASHBOARD_FQDN
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dashboard
                port:
                  number: 80
